--- a/BDD/package.json
+++ b/BDD/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cucumber-js app.feature --require steps/**/*.js",
-    "test:bdd": "cucumber-js app.feature --require steps/**/*.js"
+    "test": "cucumber-js app.feature --require steps/**/*.js --parallel 1",
+    "test:bdd": "cucumber-js app.feature --require steps/**/*.js --parallel 1"
   },
   "keywords": [],
   "author": "",
