--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "c8 node --test tests/unit/**/*.test.js",
+    "test:unit": "c8 node --test tests/unit/**/*.test.js",
+    "test:unit:coverage": "c8 --reporter=html --reporter=text --reporter=lcov node --test tests/unit/**/*.test.js",
+    "test:bdd": "cucumber-js tests/bdd/features/**/*.feature --require tests/bdd/steps/**/*.js",
+    "test:api": "newman run tests/api/\"Todo API Tests.postman_collection.json\"",
     "start": "nodemon index.js"
   },
   "author": "Harshit Shankhdhar",
@@ -19,5 +23,12 @@
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@cucumber/cucumber": "^12.5.0",
+    "c8": "^10.1.3",
+    "chai": "^6.2.2",
+    "newman": "^6.2.1",
+    "tslib": "^2.8.1"
   }
 }
