--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "c8 node --test 'tests/unit/*.test.js'",
-    "test:unit": "c8 node --test 'tests/unit/*.test.js'",
-    "test:unit:coverage": "c8 --reporter=html --reporter=text --reporter=lcov node --test 'tests/unit/*.test.js'",
+    "test": "c8 node --test tests/unit/todo.test.js tests/unit/user.test.js",
+    "test:unit": "c8 node --test tests/unit/todo.test.js tests/unit/user.test.js",
+    "test:unit:coverage": "c8 --reporter=html --reporter=text --reporter=lcov node --test tests/unit/todo.test.js tests/unit/user.test.js",
     "test:bdd": "cucumber-js tests/bdd/features/**/*.feature --require tests/bdd/steps/**/*.js",
     "test:api": "newman run tests/api/\"Todo API Tests.postman_collection.json\"",
     "start": "nodemon index.js"
