fix: add c8 configuration for proper code coverage tracking

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,26 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "c8 node --test --experimental-test-coverage tests/unit/todo.test.js tests/unit/user.test.js",
-    "test:unit": "c8 node --test --experimental-test-coverage tests/unit/todo.test.js tests/unit/user.test.js",
-    "test:unit:coverage": "c8 --reporter=html --reporter=text --reporter=lcov node --test --experimental-test-coverage tests/unit/todo.test.js tests/unit/user.test.js",
+    "test": "c8 --reporter=text --reporter=lcov --reporter=html node --test tests/unit/todo.test.js tests/unit/user.test.js",
+    "test:unit": "c8 --reporter=text --reporter=lcov --reporter=html node --test tests/unit/todo.test.js tests/unit/user.test.js",
+    "test:unit:coverage": "c8 --reporter=html --reporter=text --reporter=lcov node --test tests/unit/todo.test.js tests/unit/user.test.js",
     "test:bdd": "cucumber-js tests/bdd/features/**/*.feature --require tests/bdd/steps/**/*.js",
     "test:api": "newman run tests/api/\"Todo API Tests.postman_collection.json\"",
     "start": "nodemon index.js"
+  },
+  "c8": {
+    "include": [
+      "controller/**/*.js",
+      "model/**/*.js",
+      "jwt/**/*.js",
+      "routes/**/*.js"
+    ],
+    "exclude": [
+      "tests/**",
+      "node_modules/**",
+      "coverage/**"
+    ],
+    "all": true
   },
   "author": "Harshit Shankhdhar",
   "license": "ISC",
