--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -8,9 +8,49 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-and-setup:
+    name: Build & Setup
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: |
+            backend/package-lock.json
+            frontend/package-lock.json
+            ui-tests/package-lock.json
+      
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: npm ci
+      
+      - name: Install frontend dependencies
+        working-directory: ./frontend
+        run: npm ci
+      
+      - name: Install UI test dependencies
+        working-directory: ./ui-tests
+        run: npm ci
+      
+      - name: Cache dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            backend/node_modules
+            frontend/node_modules
+            ui-tests/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+
   unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
+    needs: build-and-setup
     
     steps:
       - name: Checkout code
@@ -55,6 +95,7 @@ jobs:
   integration-tests:
     name: Integration Tests (BDD)
     runs-on: ubuntu-latest
+    needs: build-and-setup
     
     services:
       mongodb:
@@ -104,6 +145,7 @@ jobs:
   api-tests:
     name: API Tests
     runs-on: ubuntu-latest
+    needs: build-and-setup
     
     services:
       mongodb:
@@ -155,6 +197,7 @@ jobs:
   ui-tests:
     name: UI Tests
     runs-on: ubuntu-latest
+    needs: build-and-setup
     
     services:
       mongodb:
@@ -232,107 +275,140 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      
       - name: Download all test results
         uses: actions/download-artifact@v4
         with:
-          path: test-results
+          path: .
       
-      - name: Generate test metrics report
+      - name: Organize test results
         run: |
-          cat > test-results/test-metrics.md << 'EOF'
-          # Test Automation Metrics Report
+          mkdir -p test-results
           
-          ## Pipeline Execution Summary
-          - **Date**: $(date)
-          - **Branch**: ${{ github.ref_name }}
-          - **Commit**: ${{ github.sha }}
-          
-          ## Quality Metrics
-          
-          ### 1. Code Coverage
-          EOF
-          
-          if [ -d "test-results/coverage-report" ]; then
-            echo "Coverage reports available in artifacts" >> test-results/test-metrics.md
+          # Copy test result files to expected locations
+          if [ -f "unit-test-results/unit-test-results.txt" ]; then
+            cp unit-test-results/unit-test-results.txt backend/unit-test-results.txt
           fi
           
-          cat >> test-results/test-metrics.md << 'EOF'
-          
-          ### 2. Test Execution Results
-          
-          #### Unit Tests
-          EOF
-          
-          if [ -f "test-results/unit-test-results/unit-test-results.txt" ]; then
-            echo '```' >> test-results/test-metrics.md
-            tail -20 test-results/unit-test-results/unit-test-results.txt >> test-results/test-metrics.md
-            echo '```' >> test-results/test-metrics.md
+          if [ -f "bdd-test-results/bdd-test-results.txt" ]; then
+            cp bdd-test-results/bdd-test-results.txt backend/bdd-test-results.txt
           fi
           
-          cat >> test-results/test-metrics.md << 'EOF'
-          
-          #### BDD Tests
-          EOF
-          
-          if [ -f "test-results/bdd-test-results/bdd-test-results.txt" ]; then
-            echo '```' >> test-results/test-metrics.md
-            tail -20 test-results/bdd-test-results/bdd-test-results.txt >> test-results/test-metrics.md
-            echo '```' >> test-results/test-metrics.md
+          if [ -f "api-test-results/api-test-results.txt" ]; then
+            cp api-test-results/api-test-results.txt backend/api-test-results.txt
           fi
           
-          cat >> test-results/test-metrics.md << 'EOF'
-          
-          #### API Tests
-          EOF
-          
-          if [ -f "test-results/api-test-results/api-test-results.txt" ]; then
-            echo '```' >> test-results/test-metrics.md
-            tail -30 test-results/api-test-results/api-test-results.txt >> test-results/test-metrics.md
-            echo '```' >> test-results/test-metrics.md
+          if [ -f "api-test-results/api-test-results.json" ]; then
+            cp api-test-results/api-test-results.json backend/api-test-results.json
           fi
           
-          cat >> test-results/test-metrics.md << 'EOF'
-          
-          #### UI Tests
-          EOF
-          
-          if [ -f "test-results/ui-test-results/ui-test-results.txt" ]; then
-            echo '```' >> test-results/test-metrics.md
-            tail -20 test-results/ui-test-results/ui-test-results.txt >> test-results/test-metrics.md
-            echo '```' >> test-results/test-metrics.md
+          if [ -f "ui-test-results/ui-test-results.txt" ]; then
+            mkdir -p ui-tests
+            cp ui-test-results/ui-test-results.txt ui-tests/ui-test-results.txt
           fi
-          
-          cat >> test-results/test-metrics.md << 'EOF'
-          
-          ### 3. Test Execution Time
-          - Total Pipeline Duration: Available in GitHub Actions summary
-          
-          ### 4. Pass/Fail Rate
-          - Check individual test stage results above
-          
-          ### 5. Defects Found
-          - Review failed test cases in the artifacts
-          EOF
-          
-          cat test-results/test-metrics.md
       
-      - name: Upload consolidated metrics report
+      - name: Generate automated metrics report
+        run: |
+          node scripts/generate-metrics.js
+        continue-on-error: true
+      
+      - name: Display metrics summary
+        if: always()
+        run: |
+          echo "📊 Test Metrics Generated"
+          echo ""
+          if [ -f "test-results/metrics.json" ]; then
+            cat test-results/metrics.json
+          fi
+      
+      - name: Upload metrics report
         uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: test-metrics-report
-          path: test-results/test-metrics.md
+          name: metrics-report
+          path: |
+            test-results/METRICS-REPORT.md
+            test-results/metrics.json
       
-      - name: Comment PR with test results
+      - name: Upload all test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: all-test-results
+          path: |
+            backend/unit-test-results.txt
+            backend/bdd-test-results.txt
+            backend/api-test-results.txt
+            backend/api-test-results.json
+            ui-tests/ui-test-results.txt
+      
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: coverage-html-report
+          path: coverage-report/
+      
+      - name: Comment PR with metrics
         if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs');
-            const report = fs.readFileSync('test-results/test-metrics.md', 'utf8');
             
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: report
-            });
+            let report = '# 🧪 Test Automation Results\n\n';
+            
+            if (fs.existsSync('test-results/METRICS-REPORT.md')) {
+              const fullReport = fs.readFileSync('test-results/METRICS-REPORT.md', 'utf8');
+              
+              // Extract only executive summary for PR comment
+              const summaryMatch = fullReport.match(/## 📊 Executive Summary([\s\S]*?)---/);
+              if (summaryMatch) {
+                report += summaryMatch[0];
+              }
+              
+              // Add quality gates
+              const gatesMatch = fullReport.match(/## 5\. Quality Gates Status([\s\S]*?)---/);
+              if (gatesMatch) {
+                report += '\n' + gatesMatch[0];
+              }
+              
+              report += '\n📄 **Full Report**: Download the `metrics-report` artifact for detailed analysis.\n';
+            } else {
+              report += '⚠️ Metrics report generation failed. Check workflow logs.\n';
+            }
+            
+            try {
+              await github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: report
+              });
+            } catch (error) {
+              console.log('Could not post comment:', error.message);
+            }
+      
+      - name: Evaluate quality gates
+        if: always()
+        run: |
+          if [ -f "test-results/metrics.json" ]; then
+            # Check if quality gates passed
+            STATUS=$(cat test-results/metrics.json | grep -o '"overall":"[^"]*"' | cut -d'"' -f4 || echo "UNKNOWN")
+            
+            echo "Quality Gate Status: $STATUS"
+            
+            if [[ "$STATUS" == *"FAILED"* ]]; then
+              echo "❌ Quality gates failed!"
+              echo "::error::Quality gates failed. Check metrics report for details."
+              exit 1
+            else
+              echo "✅ All quality gates passed!"
+            fi
+          else
+            echo "⚠️ No metrics file found, skipping quality gate check"
+          fi
