refactor: consolidate to 2 artifacts only
- coverage-report: code coverage files
- metrics-report: metrics + ALL test results (unit, bdd, api, ui)
- Remove individual test artifacts (bdd, api, ui)

--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -73,14 +73,12 @@ jobs:
           set -o pipefail
           npm run test:unit 2>&1 | tee unit-test-results.txt
       
-      - name: Upload unit test results
+      - name: Upload coverage report
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: unit-test-results
-          path: |
-            backend/unit-test-results.txt
-            backend/coverage/
+          name: coverage-report
+          path: backend/coverage/
 
   integration-tests:
     name: Integration Tests (BDD)
@@ -125,13 +123,6 @@ jobs:
         run: |
           set -o pipefail
           npm run test:bdd 2>&1 | tee bdd-test-results.txt
-      
-      - name: Upload BDD test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: bdd-test-results
-          path: backend/bdd-test-results.txt
 
   api-tests:
     name: API Tests
@@ -176,15 +167,6 @@ jobs:
         run: |
           set -o pipefail
           npm run test:api -- --reporters cli,json --reporter-json-export api-test-results.json 2>&1 | tee api-test-results.txt
-      
-      - name: Upload API test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: api-test-results
-          path: |
-            backend/api-test-results.txt
-            backend/api-test-results.json
 
   ui-tests:
     name: UI Tests
@@ -250,13 +232,6 @@ jobs:
         run: |
           set -o pipefail
           npm test 2>&1 | tee ui-test-results.txt
-      
-      - name: Upload UI test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: ui-test-results
-          path: ui-tests/ui-test-results.txt
 
   test-reporting:
     name: Test Reporting & Metrics
@@ -326,6 +301,11 @@ jobs:
           path: |
             test-results/METRICS-REPORT.md
             test-results/metrics.json
+            backend/unit-test-results.txt
+            backend/bdd-test-results.txt
+            backend/api-test-results.txt
+            backend/api-test-results.json
+            ui-tests/ui-test-results.txt
       
       - name: Comment PR with metrics
         if: github.event_name == 'pull_request'
