--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -10,9 +10,40 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-and-setup:
+    name: Build & Setup
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: |
+            backend/package-lock.json
+            frontend/package-lock.json
+            ui-tests/package-lock.json
+      
+      - name: Install backend dependencies
+        working-directory: ./backend
+        run: npm ci
+      
+      - name: Install frontend dependencies
+        working-directory: ./frontend
+        run: npm ci
+      
+      - name: Install UI test dependencies
+        working-directory: ./ui-tests
+        run: npm ci
+
   unit-tests:
     name: Unit Tests
     runs-on: ubuntu-latest
+    needs: build-and-setup
     
     steps:
       - name: Checkout code
@@ -52,6 +83,7 @@ jobs:
   integration-tests:
     name: Integration Tests (BDD)
     runs-on: ubuntu-latest
+    needs: build-and-setup
     
     services:
       mongodb:
@@ -102,6 +134,7 @@ jobs:
   api-tests:
     name: API Tests
     runs-on: ubuntu-latest
+    needs: build-and-setup
     
     services:
       mongodb:
@@ -156,6 +189,7 @@ jobs:
   ui-tests:
     name: UI Tests
     runs-on: ubuntu-latest
+    needs: build-and-setup
     
     services:
       mongodb:
