--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ '**' ]
   schedule:
-    - cron: '0 2 * * *'  # Runs every night at 2:00 AM UTC
+    - cron: '35 13 * * *'  # Runs every day at 1:35 PM UTC
   workflow_dispatch:
 
 jobs:
