Set pipeline schedule to 2 PM Paris time

--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ '**' ]
   schedule:
-    - cron: '35 13 * * *'  # Runs every day at 1:35 PM UTC
+    - cron: '0 13 * * *'  # Runs every day at 2:00 PM Paris time (1:00 PM UTC)
   workflow_dispatch:
 
 jobs:
