--- a/.github/workflows/test-pipeline.yml
+++ b/.github/workflows/test-pipeline.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ '**' ]
   schedule:
-    - cron: '0 13 * * *'  # Runs every day at 2:00 PM Paris time (1:00 PM UTC)
+    - cron: '*/5 * * * *'  # Runs every 5 minutes for testing
   workflow_dispatch:
 
 jobs:
