--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "test": "node --test tests/unit/**/*.test.js",
     "test:unit": "node --test tests/unit/**/*.test.js",
+    "test:bdd": "cucumber-js tests/bdd/features --require tests/bdd/steps/**/*.js --require-module @babel/register",
+    "test:api": "newman run tests/api/\"Todo API Tests.postman_collection.json\" -e tests/api/environment.json --reporters cli,json --reporter-json-export tests/api/results.json",
+    "test:all": "npm run test:unit && npm run test:bdd && npm run test:api",
+    "test:coverage": "c8 --reporter=html --reporter=text --reporter=lcov node --test tests/unit/**/*.test.js",
     "start": "nodemon index.js"
   },
   "author": "Harshit Shankhdhar",
@@ -20,5 +24,12 @@
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@babel/register": "^7.24.6",
+    "@cucumber/cucumber": "^10.9.0",
+    "c8": "^10.1.2",
+    "chai": "^5.3.3",
+    "newman": "^6.2.1"
   }
 }
