--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
 
   ui-tests:
     name: UI Tests
-    runs-on:setup-and-build,  ubuntu-latest
+    runs-on: ubuntu-latest
     needs: [backend-tests, frontend-tests]
     
     services:
