--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Daily Test Suite
 
 on:
   push:
-    branches: [ ui-testing ]
+    branches: [ integration ]
   pull_request:
-    branches: [ ui-testing ]
+    branches: [ integration ]
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch:
@@ -21,13 +21,13 @@ jobs:
         with:
           node-version: '20'
       
-      - run: npm ci
+      - run: npm install
         working-directory: ./backend
       
-      - run: npm ci
+      - run: npm install
         working-directory: ./frontend
       
-      - run: npm ci
+      - run: npm install
         working-directory: ./ui-tests
       
       - run: npm run build
@@ -58,7 +58,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: backend/package-lock.json
       
-      - run: npm ci
+      - run: npm install
         working-directory: ./backend
       
       - name: Run unit tests
@@ -102,7 +102,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
       
-      - run: npm ci
+      - run: npm install
         working-directory: ./frontend
       
       - run: npm test
@@ -110,7 +110,7 @@ jobs:
 
   ui-tests:
     name: UI Tests
-    runs-on:setup-and-build,  ubuntu-latest
+    runs-on: ubuntu-latest
     needs: [backend-tests, frontend-tests]
     
     services:
@@ -135,13 +135,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y google-chrome-stable
       
-      - run: npm ci
+      - run: npm install
         working-directory: ./backend
       
-      - run: npm ci
+      - run: npm install
         working-directory: ./frontend
       
-      - run: npm ci
+      - run: npm install
         working-directory: ./ui-tests
       
       - name: Start backend
