Fix for ui-test errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,18 +131,13 @@ jobs:
         with:
           node-version: '20'
       
-      - name: Install Chrome and Chromedriver
+      - name: Install Chrome (use npm chromedriver)
         run: |
           wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
           sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list'
           sudo apt-get update
-          sudo apt-get install -y google-chrome-stable unzip curl
-          CHROME_VERSION=$(google-chrome --version | sed 's/Google Chrome //')
-          CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION%.*}")
-          wget -q "https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
-          unzip -q chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/chromedriver
-          sudo chmod +x /usr/local/bin/chromedriver
+          sudo apt-get install -y google-chrome-stable
+          echo "Chrome installed: $(google-chrome --version)"
         env:
           CHROME_BIN: /usr/bin/google-chrome
       
