Fix for ui-test errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,3 +167,5 @@ jobs:
       
       - run: npm test
         working-directory: ./ui-tests
+        env:
+          CHROME_BIN: /usr/bin/google-chrome
