--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "c8 node --test tests/unit/*.test.js",
     "test:unit": "c8 node --test tests/unit/*.test.js",
-    "test:bdd": "cucumber-js tests/bdd/features/**/*.feature --require tests/bdd/steps/**/*.js",
+    "test:bdd": "cucumber-js tests/bdd/features/**/*.feature --require tests/bdd/steps/**/*.js --format progress-bar",
     "test:api": "newman run tests/api/\"Todo API Tests.postman_collection.json\"",
     "start": "nodemon index.js"
   },
@@ -23,7 +23,7 @@
       "node_modules/**",
       "coverage/**"
     ],
-    "reporter": ["text", "lcov", "html"],
+    "reporter": ["lcov", "html"],
     "all": true
   },
   "author": "Harshit Shankhdhar",
