Change BDD format to pretty for detailed output

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "c8 node --test tests/unit/*.test.js",
     "test:unit": "c8 node --test tests/unit/*.test.js",
-    "test:bdd": "cucumber-js tests/bdd/features/**/*.feature --require tests/bdd/steps/**/*.js --format progress-bar",
+    "test:bdd": "cucumber-js tests/bdd/features/**/*.feature --require tests/bdd/steps/**/*.js --format pretty",
     "test:api": "newman run tests/api/\"Todo API Tests.postman_collection.json\"",
     "start": "nodemon index.js"
   },
